# WebTrack

./: Makefile  create_admin.py  create_db.py  pyproject.toml  setup.cfg  webapp.db
service/: __main__.py  app.py  config.py  models.py  server.py  weather.py
service/forms/: form.py
service/parse/: news.py  weather.py
service/parse/tmp/: python.html
service/repo/: news.py
service/templates/: index.html  login.html  news.html
service/view/: news.py  server.py  weather.py
service/view/templates/: index.html  news.html
service/views/: login.py  news.py  weather.py
