[tool.poetry]
name = "webtrack"
version = "0.1.0"
description = ""
authors = ["astra <zorkin.roman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
requests = "^2.27.1"
pydantic = "^1.9.0"
beautifulsoup4 = "^4.10.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^1.0.1"

[tool.poetry.dev-dependencies]
# fix bandit 1.7.3-4 errors
bandit = "1.7.2"
mypy = "^0.942"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
